--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>微信二维码生成系统</title>
+	<title>wxid生成qrcode 20231205</title>
 </head>
 <style>
 	* {
