--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<div class="container">
 		<div id="qrcode"></div>
 		<div class="wow">
-			<span>请输入微信号👉:</span>
+			<span>请输入wxid_👉:</span>
 			<input type="text" id="input">
 			<input class="sub" type="submit" value="确定" onclick="change()">
 			<SCRIPT LANGUAGE="javascript"> alert("请勿用于非法用途！"); </SCRIPT> 
